# Ray-Tracing-Old

./: Box.cpp  Box.hpp  BoxFactory.cpp  BoxFactory.hpp  CMakeLists.txt  Factory.hpp  Figure.cpp  Figure.hpp  Sphere.cpp  Sphere.hpp  SphereFactory.cpp  SphereFactory.hpp  Tetra.cpp  Tetra.hpp  TetraFactory.cpp  TetraFactory.hpp  figures.txt  functions.cpp  functions.hpp  main.cpp  settings.txt
